--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,12 +19,13 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    
+
     "paths": {
       "@common": ["./src/common"],
       "@models": ["./src/models"],
       "@hooks": ["./src/hooks"],
       "@types": ["./src/types"],
+      "@schemas": ["./src/schemas"]
     }
   },
   "include": ["src"],
