--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-if": "^4.1.5",
+    "react-svg": "^16.1.28",
     "yup": "^1.2.0"
   },
   "devDependencies": {
